--- a/task05/src/main/res/values/strings.xml
+++ b/task05/src/main/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_book">BookActivity</string>
+    <string name="select_color">Select background color</string>
+    <string name="select_color_summary">Select the background color of your app</string>
+    <string name="select_color_default">FFFFFF</string>
 
 </resources>
