--- a/task05/src/main/res/values/strings.xml
+++ b/task05/src/main/res/values/strings.xml
@@ -7,5 +7,8 @@
     <string name="select_color">Select background color</string>
     <string name="select_color_summary">Select the background color of your app</string>
     <string name="select_color_default">FFFFFF</string>
+    <string name="menu_load_books">Load books from file</string>
+    <string name="show_titles">Show titles</string>
+    <string name="show_authors">Show authors</string>
 
 </resources>
