--- a/task07/src/main/res/values/strings.xml
+++ b/task07/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">AppName</string>
+    <string name="app_name">Server</string>
     <string name="hello">Hello, World!</string>
 </resources>
