--- a/task07client/src/main/res/values/strings.xml
+++ b/task07client/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">AppName</string>
-    <string name="hello">Hello, World!</string>
+    <string name="app_name">Client</string>
+    <string name="write_numbers">ADD TWO NUMBERS</string>
+    <string name="sum">SUM</string>
 </resources>
